# octoforth

./: Cargo.toml  README.md
cli/: Cargo.toml
client/: Cargo.toml
client/src/: main.rs
example/: stdlib_tests.fth  using_test.fth
lib/: Cargo.toml
lib/src/: builtins.rs  callable.rs  compiler.rs  dictionary.rs  error.rs  expr.rs  filesystem.rs  interpreter.rs  lib.rs  object.rs  optimizer.rs  parser.rs  scanner.rs  stmt.rs  token.rs
repl/: Cargo.toml
repl/src/: main.rs
