[package]
name = "octolisp-repl"
version = "0.1.0"
authors = ["Lukas Krickl <lukas@krickl.dev>"]
description = "octolisp repl for local testing"
license = "MIT"
homepage = "https://github.com/unlink2/octolisp"
edition = "2018"

[[bin]]
name = "octolisp-repl"
path = "src/main.rs"

[dependencies]
octolisp = {path = "../lib"}
clap = "3.0.0-beta.2"
